# latlng

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.replication.yml  docker-compose.yml
.github/act/: release-tag-push.json
.github/workflows/: ci.yml  release.yml
crates/latlng-auth/: Cargo.toml
crates/latlng-auth/src/: lib.rs
crates/latlng-capnp/: Cargo.toml
crates/latlng-capnp/src/: codec.rs  error.rs  handlers.rs  lib.rs  rpc_state.rs  runtime.rs  service.rs  streams.rs
crates/latlng-config/: Cargo.toml
crates/latlng-config/src/: lib.rs
crates/latlng-core/: Cargo.toml
crates/latlng-core/src/: admin.rs  catalog.rs  commands.rs  engine.rs  geofences.rs  internals.rs  lib.rs  log_codec.rs  persistence.rs  queries.rs  restore.rs  util.rs  wasm.rs  webhook_ids.rs
crates/latlng-endpoints/: Cargo.toml
crates/latlng-endpoints/src/: lib.rs
crates/latlng-geo/: Cargo.toml
crates/latlng-geo/src/: lib.rs
crates/latlng-geofence/: Cargo.toml
crates/latlng-geofence/src/: lib.rs
crates/latlng-http/: Cargo.toml
crates/latlng-http/src/: authz.rs  error.rs  handlers.rs  lib.rs  metrics.rs  middleware.rs  openapi.rs  routes.rs  state.rs
crates/latlng-index/: Cargo.toml
crates/latlng-index/proptest-regressions/: lib.txt
crates/latlng-index/src/: lib.rs
crates/latlng-native-executor/: Cargo.toml
crates/latlng-native-executor/src/: lib.rs
crates/latlng-platform/: Cargo.toml
crates/latlng-platform/src/: lib.rs
crates/latlng-replication/: Cargo.toml
crates/latlng-replication/src/: lib.rs
crates/latlng-schema/: Cargo.toml  build.rs
crates/latlng-schema/schema/: latlng.capnp
crates/latlng-schema/src/: lib.rs
crates/latlng-server/: Cargo.toml
crates/latlng-server/src/: logging.rs  main.rs  replication.rs  storage.rs
crates/latlng-server/tests/: server_smoke.rs
crates/latlng-storage/: Cargo.toml
crates/latlng-storage-aof/: Cargo.toml
crates/latlng-storage-aof/src/: lib.rs
crates/latlng-storage-memory/: Cargo.toml
crates/latlng-storage-memory/src/: lib.rs
crates/latlng-storage-sqlite/: Cargo.toml
crates/latlng-storage-sqlite/src/: lib.rs
crates/latlng-storage/src/: lib.rs
crates/latlng-webhook-queue/: Cargo.toml
crates/latlng-webhook-queue/src/: lib.rs
crates/latlng-ws/: Cargo.toml
crates/latlng-ws/src/: lib.rs
docs/: architecture.md  auth.md  config.md  metrics.md  persistence.md  release-checklist.md
examples/: geofence-webhook-demo.sh
examples/docker/: follower.toml  leader.toml  single-node.toml
scripts/: bump-version.mjs  render-homebrew-formula.mjs
tools/latlng-benchmark/: Cargo.toml
tools/latlng-benchmark/src/: main.rs
tools/latlng-cli/: Cargo.toml
tools/latlng-cli/src/: main.rs
tools/latlng-server-benchmark/: Cargo.toml
tools/latlng-server-benchmark/src/: main.rs
