[package]
name = "latlng-auth"
description = "Shared auth validation for latlng transports."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
glob-match.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true

[lints]
workspace = true
