[package]
name = "latlng-config"
description = "Shared runtime config model for latlng native transports."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
latlng-auth = { path = "../latlng-auth" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
