[package]
name = "latlng-replication"
description = "Replication support for latlng."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
latlng-storage = { path = "../latlng-storage" }
serde.workspace = true

[lints]
workspace = true
