[package]
name = "latlng-schema"
description = "Cap'n Proto schema crate for latlng."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
build = "build.rs"

[dependencies]
capnp.workspace = true

[build-dependencies]
capnpc.workspace = true

[lints]
workspace = true
