[package]
name = "latlng-storage-aof"
description = "Append-only file backend for latlng."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
bytes.workspace = true
bincode.workspace = true
latlng-storage = { path = "../latlng-storage" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
