[package]
name = "latlng-storage-memory"
description = "In-memory storage backend for latlng."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
latlng-storage = { path = "../latlng-storage" }
bytes.workspace = true
spin.workspace = true

[lints]
workspace = true
