[package]
name = "latlng-ws"
description = "WebSocket transport crate for latlng."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
axum.workspace = true
futures-util.workspace = true
latlng-auth = { path = "../latlng-auth" }
latlng-core = { path = "../latlng-core" }
latlng-native-executor = { path = "../latlng-native-executor" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
jsonwebtoken.workspace = true
latlng-storage-memory = { path = "../latlng-storage-memory" }
tower.workspace = true
tokio-tungstenite.workspace = true

[lints]
workspace = true
