[package]
name = "latlng-cli"
description = "CLI tooling for latlng."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
clap.workspace = true
latlng-config = { path = "../../crates/latlng-config" }
latlng-storage-aof = { path = "../../crates/latlng-storage-aof" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
