[package]
name = "latlng-server-benchmark"
description = "Black-box benchmark tooling for latlng-server."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
capnp.workspace = true
capnp-rpc.workspace = true
chrono.workspace = true
latlng-auth = { path = "../../crates/latlng-auth" }
latlng-config = { path = "../../crates/latlng-config" }
latlng-schema = { path = "../../crates/latlng-schema" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7.16", features = ["compat"] }
uuid.workspace = true
